Ajustes do novo layout

--- a/index.html
+++ b/index.html
@@ -84,11 +84,12 @@
         <div class="container">
             <div class="row ">
                 <div class="col-12">
-                    <h1 class="color-blue text-center mb-4 mt-5 mt-lg-0">UNIVERSALIZA MINAS</h1>
-                    <p>O Programa Universaliza Minas tem como objetivo principal promover a universalização dos serviços de saneamento da Copasa, nos municípios em que a companhia atua.</p>                        
-                    <p>Com ele a Copasa planeja levar água tratada e esgoto para localidades rurais e de baixa densidade populacional nos sistemas operados.</p>                         
-                    <p>A empresa já atende 99,4% de seus clientes com água tratada e o Universaliza pretende fazer com que esse atendimento vá além.</p>                         
-                    <p>A iniciativa da Copasa atende a uma reivindicação histórica da população que vive em localidades e distritos mais afastados dos grandes centros urbanos e que nunca tiveram acesso ao saneamento básico.</p>
+                    <h1 class="color-blue mb-4 mt-5 mt-lg-0">UNIVERSALIZA MINAS</h1>
+                    <p>O Programa Universaliza Minas da Copasa é pioneiro no Brasil em atendimento à população em áreas rurais e em comunidades urbanas em vulnerabilidade.</p>
+                    <p>O principal objetivo do programa é promover a universalização dos serviços de saneamento da Copasa, nos municípios em que a Companhia atua.</p>                         
+                    <p>Assim, o Universaliza Minas vai levar água tratada e esgotamento sanitário para localidades rurais e de baixa densidade populacional nas áreas em que a infraestrutura ainda é incipiente.</p>                         
+                    <p>A Copasa já atende 99,6% de seus clientes com água tratada e 79,4% com esgoto coletado e tratado e o Universaliza potencializa o crescimento desses números.</p>
+                    <p>Essa iniciativa da Copasa atende a uma reivindicação histórica das comunidades que vivem em localidades e distritos mais afastados dos grandes centros urbanos e que nunca tiveram acesso ao saneamento básico.</p>
                     <p>A Copasa se mantém, assim e cada vez mais, a serviço dos mineiros.</p>
                 </div>
             </div>
@@ -99,8 +100,10 @@
     <a class="anchor" id="localidades"></a>
     <section class="copasa__localidades">
         <div class="container">
-            <div class="row ">
+            <div class="row">
                 <div class="col-12 col-lg-7">
+                    <h2 class="color-blue">UNIVERSALIZA HOJE</h2>
+                    <p>Dados atualizados em outubro/2023</p>
                     <div class="copasa__localidades__map">
                         <svg class="copasa__localidades__map__img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1520 1183" xml:space="preserve">
                             <path id="Gray" fill="#A9ABAB" d="M1520,254.7c0-0.9-0.9-2.1-1.9-2.6c-1-0.6-2.9-3.1-4.1-5.5c-1.1-2.4-2.7-4.9-3.5-5.6l-1.3-1.1
@@ -1554,19 +1557,19 @@
                     <div class="copasa__localidades__topic">
                         <div class="copasa__localidades__topic__item">
                             <img  src="./dist/img/icons/Ativo1.svg" />
-                            <p><b><span class="animate-num" num="130">0</span> municípios</b></p>
+                            <p><b><span class="animate-num" num="142">0</span> municípios</b></p>
                         </div>
                         <div class="copasa__localidades__topic__item">
                             <img src="./dist/img/icons/Ativo2.svg" />
-                            <p><b><span class="animate-num" num="333">0</span> localidades</b></p>
+                            <p><b><span class="animate-num" num="371">0</span> localidades</b></p>
                         </div>
                         <div class="copasa__localidades__topic__item">
                             <img src="./dist/img/icons/Ativo3.svg" />
-                            <p><b><span class="animate-num" num="220">0</span> mil pessoeas beneficiadas</b></p>
+                            <p><b><span class="animate-num" num="225">0</span> mil pessoeas beneficiadas</b></p>
                         </div>
                         <div class="copasa__localidades__topic__item">
                             <img src="./dist/img/icons/Ativo4.svg" />
-                            <p><b>R$<span class="animate-num" num="279">0</span> milhões de investimento inicial</b></p>
+                            <p><b>R$<span class="animate-num" num="304">0</span> milhões de investimento inicial</b></p>
                         </div>
                     </div>
                 </div>
@@ -1578,14 +1581,20 @@
     <!-- CONHEÇA -->
     <a class="anchor" id="conheca"></a>
     <section class="copasa__conheca">
-        <img class="copasa__conheca__bg" src="./dist/img/pics/bg-3.svg" />
         <div class="container copasa__conheca__content">
             <div class="row">
-                <div class="col-12 col-md-6 offset-md-1">
-                    <h3 data-aos="fade-right" class="color-white">Conheça as cidades e os projetos do Universaliza</h3>
+                <div class="col-12 mb-4">
+                    <h3 data-aos="fade-up" class="color-blue-medium text-center">Conheça as cidades e os 
+                        projetos do Universaliza</h3>
                 </div>                    
                 <div class="col-12 col-md-4">
-                    <a data-aos="fade-left" href="https://www.copasa.com.br/universalizaminas/Docs/nomearquivo.extensao" target="_blank" class="copasa__conheca__button"><p>Clique aqui</p></a>
+                    <a data-aos="fade-up" href="http://www.copasa.com.br/universalizaminas/docs/concluidas" target="_blank" class="copasa__conheca__button"><p>Concluídos</p></a>
+                </div>
+                <div class="col-12 col-md-4">
+                    <a data-aos="fade-up" href="http://www.copasa.com.br/universalizaminas/docs/em_andamento" target="_blank" class="copasa__conheca__button"><p>Em andamento</p></a>
+                </div>
+                <div class="col-12 col-md-4">
+                    <a data-aos="fade-up" href="http://www.copasa.com.br/universalizaminas/docs/incluidas" target="_blank" class="copasa__conheca__button"><p>Incluídas</p></a>
                 </div>
             </div>
         </div>
@@ -1600,41 +1609,43 @@
                 <div class="col-12">
                     <h3 class="color-blue text-center mb-5">CRITÉRIOS DE AVALIAÇÃO DE HIERARQUIZAÇÃO DO PROJETO </h3>
                 </div>
-                <div data-aos="fade-right" class="col-12 col-md-8 p-md-0 my-5 col-lg-7 offset-lg-1">
-                    <p>A Copasa assume a meta de universalização em parceria com os municípios participantes. </p>
-                    <p>Para entrar no programa, o munícipio deve procurar a Copasa para iniciar os procedimentos de avaliação.</p>
-                    <p>Os Critérios de Avaliação de Hierarquização do Projeto podem ser conhecidos no documento do link.</p>
+                <div class="col-12">
+                    <p>Com o intuito de garantir um atendimento eficiente e equitativo, a equipe responsável pela execução do programa utilizará uma série de critérios para analisar e hierarquizar as localidades a serem atendidas.
+                        A seguir, apresentamos os principais itens que serão observados nesse processo:</p>
                 </div>
-                <div data-aos="fade-left" class="col-12 col-md-4 col-lg-3">
-                    <div class="copasa__link bg-blue-light">
-                        <div class="bg-white p-2">
-                            <a class="copasa__link__container blue-border" href="https://www.copasa.com.br/media2/inova/PanfInova.pdf" target="_blank">
-                                <div class="copasa__link__container__content">
-                                    <img src="./dist/img/icons/Ativo5.svg" />
-                                    <h3 class="color-blue text-center">Critérios de 
-                                        Avaliação </h3>
-                                </div>
-                                <?xml version="1.0" encoding="utf-8"?>
-                                <svg class="copasa__link__container__click-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 511.8 505.8" xml:space="preserve">
-                                <g>
-                                    <path fill="#21409a" d="M508.9,464.6c-25.8-25.4-52.2-51.5-79.8-78.8c-3.9-3.8-3.9-10.1,0-14c20.3-20.1,40.6-40.2,61.2-60.6
-                                        c5.1-5,3.3-13.6-3.4-16.1c-94.6-36.2-188.7-72.2-284.4-108.8c-7.9-3-15.7,4.8-12.7,12.7C226.6,295,262.6,389.2,299.3,485
-                                        c2.6,6.7,11.2,8.5,16.2,3.4c21-21.5,41.4-42.4,62.9-64.4c3.8-3.9,10.2-3.9,14,0c27,27.4,53.2,53.9,77.8,78.9
-                                        c3.8,3.9,10,3.9,13.9,0.1c8-7.9,16.1-15.9,24.8-24.4C512.8,474.7,512.8,468.4,508.9,464.6z"/>
-                                    <path fill="#21409a" d="M175.3,330.9c-82.9-6.5-134.4-74.3-136.3-140.8c-2.3-81,61.9-148.5,141.9-151.1
-                                        c72.6-2.4,142.9,53.4,150.2,134.2c0.9,10,9.2,17.7,19.3,17.7h0c11.3,0,20.2-9.6,19.3-20.9c-4.3-54.4-34-113.7-96.2-147.6
-                                        C197.4-18.9,102.9-1.9,46.1,63c-57.4,65.5-61.6,161.4-10.3,231.6c37.1,50.8,91.4,72.3,136.7,75.4c11.2,0.8,20.7-8.1,20.7-19.3v-0.6
-                                        C193.2,340,185.4,331.7,175.3,330.9z"/>
-                                    <path fill="#21409a" d="M185.7,106.1c29.1,0.5,54.3,16.3,68.1,40.3c6.1,10.7,20.7,12.9,29.8,4.6c6.8-6.1,8.4-16.2,3.8-24.1
-                                        c-10.7-18.1-26.2-34.2-44.4-44.5C195.2,55.6,136,64.9,98.6,105.1c-36.9,39.7-41.9,99.6-12.1,144.6c13.5,20.4,34.8,36.7,57,45.8
-                                        c11.7,4.8,24.9-2.6,26.7-15.2l0.1-0.7c1.3-9.1-3.9-17.8-12.5-21c-36.4-13.5-58.2-50.5-50.1-89.1
-                                        C115.7,132.4,148.7,105.4,185.7,106.1z"/>
-                                </g>
-                                </svg>
-                            </a>
-                        </div>
-                        <h4 class="color-white text-center pt-4">PARTICIPAÇÃO</h4>
-                    </div>
+                <div class="col-12 copasa__participacao__item">
+                    <img src="./dist/img/icons/icon-1.jpg" />
+                    <p><b>Índice de Desenvolvimento Humano (IDH):</b>
+                        Será analisado o IDH das localidades, buscando priorizar aquelas com menor índice, com o intuito de promover a redução das desigualdades socioeconômicas e melhorar as condições de vida das populações mais vulneráveis.</p>
+                </div>
+                <div class="col-12 copasa__participacao__item">
+                    <img src="./dist/img/icons/icon-2.jpg" />
+                    <p><b>Déficit para a Universalização do Serviço:</b>
+                        Será avaliado o grau de defasagem das localidades e municípios em relação aos serviços de água e saneamento básico, levando em consideração as metas estabelecidas para a universalização.</p>
+                </div>
+                <div class="col-12 copasa__participacao__item">
+                    <img src="./dist/img/icons/icon-3.jpg" />
+                    <p><b>Número de Pessoas:</b>
+                        Será considerada a quantidade de pessoas residentes nas localidades.</p>
+                </div>
+                <div class="col-12 copasa__participacao__item">
+                    <img src="./dist/img/icons/icon-4.jpg" />
+                    <p><b>Situação da Rede de Água, Reservação e Fonte de Produção:</b>
+                        Será avaliado o estado atual da infraestrutura de abastecimento de água, considerando a qualidade, a capacidade de distribuição e a existência de vazamentos e perdas.
+                        Será verificado se as localidades possuem sistemas adequados de reservatórios de água, garantindo o abastecimento contínuo. E também será analisada a capacidade e a qualidade das fontes de água utilizadas para o abastecimento das localidades, levando em conta fatores como disponibilidade, regularidade e sustentabilidade.</p>
+                </div>
+                <div class="col-12 copasa__participacao__item">
+                    <img src="./dist/img/icons/icon-5.jpg" />
+                    <p><b>Solução de Esgotamento Existente:</b>
+                        Será verificada a existência de planos e projetos para a ampliação e melhoria dos sistemas de esgotamento sanitário, visando a cobertura completa das localidades e a proteção dos recursos hídricos.</p>
+                </div>
+                <div class="col-12 copasa__participacao__item">
+                    <img src="./dist/img/icons/icon-6.jpg" />
+                    <p><b>Prazo Contratual:</b>
+                        Será levado em conta o prazo estabelecido nos contratos vigentes para a realização de investimentos e obras relacionadas aos serviços de água e esgoto.</p>
+                </div>
+                <div class="col-12 copasa__participacao__item">
+                    <p>É importante ressaltar que esses critérios serão utilizados de forma conjunta e integrada, a fim de garantir uma análise abrangente e justa das localidades a serem atendidas pelo programa Universaliza Minas.</p>
                 </div>
             </div>
         </div>
@@ -1645,31 +1656,31 @@
     <section class="copasa__acontecendo pb-4 pt-5 pt-md-0">
         <div class="container">
             <div class="row">
-                <div class="col-12 mb-5">
-                    <h3 class="color-blue text-center">UNIVERSALIZA ACONTECENDO </h3>
+                <div class="col-12 mt-4">
+                    <h3 class="color-blue">UNIVERSALIZA ACONTECENDO </h3>
+                    <p>Arquivo Copasa</p>
                 </div>
             </div>
-            <div class="row copasa__galeria">
-                <div class="col-6 col-lg-3">
-                    <div data-aos="fade-up" class="copasa__galeria__item">
-                        <img src="./dist/img/pics/PONTINHA-1.jpg" />
-                    </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                    <div data-aos="fade-up" data-aos-delay="100" class="copasa__galeria__item">
-                        <img src="./dist/img/pics/PONTINHA-2.jpg" />
-                    </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                    <div data-aos="fade-up" data-aos-delay="200" class="copasa__galeria__item">
-                        <img src="./dist/img/pics/TRÊS MARIAS-1.jpg" />
-                    </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                    <div data-aos="fade-up" data-aos-delay="300" class="copasa__galeria__item">
-                        <img src="./dist/img/pics/TRÊS MARIAS.jpg" />
-                    </div>
-                </div>
+            <div class="copasa__galeria">
+                <div class="copasa__galeria__item"><img src="./dist/img/pics/galeria/Canoeiros 1.jpg" /></div>
+                <div class="copasa__galeria__item"><img src="./dist/img/pics/galeria/Canoeiros 2.jpg" /></div>
+                <div class="copasa__galeria__item"><img src="./dist/img/pics/galeria/Canoeiros 3.jpg" /></div>
+                <div class="copasa__galeria__item"><img src="./dist/img/pics/galeria/Foto1.jpg" /></div>
+                <div class="copasa__galeria__item"><img src="./dist/img/pics/galeria/Foto2.jpg" /></div>
+                <div class="copasa__galeria__item"><img src="./dist/img/pics/galeria/Foto3.jpg" /></div>
+                <div class="copasa__galeria__item"><img src="./dist/img/pics/galeria/Foto4.jpg" /></div>
+                <div class="copasa__galeria__item"><img src="./dist/img/pics/galeria/Foto5.jpg" /></div>
+                <div class="copasa__galeria__item"><img src="./dist/img/pics/galeria/Foto6.jpg" /></div>
+                <div class="copasa__galeria__item"><img src="./dist/img/pics/galeria/Foto7.jpg" /></div>
+                <div class="copasa__galeria__item"><img src="./dist/img/pics/galeria/Foto8.jpg" /></div>
+                <div class="copasa__galeria__item"><img src="./dist/img/pics/galeria/Pontal 1.jpg" /></div>
+                <div class="copasa__galeria__item"><img src="./dist/img/pics/galeria/Pontal 2.jpg" /></div>
+                <div class="copasa__galeria__item"><img src="./dist/img/pics/galeria/Pontal 3.jpg" /></div>
+                <div class="copasa__galeria__item"><img src="./dist/img/pics/galeria/Pontal 4.jpg" /></div>
+                <div class="copasa__galeria__item"><img src="./dist/img/pics/galeria/PONTINHA-1.jpg" /></div>
+                <div class="copasa__galeria__item"><img src="./dist/img/pics/galeria/PONTINHA-2.jpg" /></div>
+                <div class="copasa__galeria__item"><img src="./dist/img/pics/galeria/TRÊS MARIAS-1.jpg" /></div>
+                <div class="copasa__galeria__item"><img src="./dist/img/pics/galeria/TRÊS MARIAS.jpg" /></div>
             </div>
         </div>
     </section>
